// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Solver finds all combinations 1`] = `
Array [
  Object {
    "index": 0,
    "numbers": Uint8Array [
      1,
    ],
    "operations": Array [],
    "priorities": Array [],
    "result": 1,
  },
  Object {
    "index": 1,
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      0,
    ],
    "priorities": Array [
      0,
    ],
    "result": 3,
  },
  Object {
    "index": 2,
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      1,
    ],
    "priorities": Array [
      0,
    ],
    "result": 2,
  },
  Object {
    "index": 3,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
    "result": 6,
  },
  Object {
    "index": 4,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
    "result": 6,
  },
  Object {
    "index": 5,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
    "result": 9,
  },
  Object {
    "index": 6,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      1,
    ],
    "priorities": Array [
      1,
      0,
    ],
    "result": 7,
  },
  Object {
    "index": 7,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
    "result": 5,
  },
  Object {
    "index": 8,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
    "result": 5,
  },
  Object {
    "index": 9,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
    "result": 6,
  },
  Object {
    "index": 10,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      1,
      0,
    ],
    "result": 6,
  },
]
`;

exports[`Solver finds soltions for given batch 1`] = `
Array [
  Object {
    "index": 3,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
    "result": 6,
  },
  Object {
    "index": 4,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
    "result": 6,
  },
  Object {
    "index": 5,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
    "result": 9,
  },
]
`;

exports[`Solver finishes once condition met 1`] = `
Array [
  Object {
    "index": 0,
    "numbers": Uint8Array [
      1,
    ],
    "operations": Array [],
    "priorities": Array [],
    "result": 1,
  },
  Object {
    "index": 1,
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      0,
    ],
    "priorities": Array [
      0,
    ],
    "result": 3,
  },
  Object {
    "index": 2,
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      1,
    ],
    "priorities": Array [
      0,
    ],
    "result": 2,
  },
  Object {
    "index": 3,
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
    "result": 6,
  },
]
`;
